--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
 <body>
 
     <button class="fixed-button" onclick="window.open('climate', '_blank');">Climate</button>
+     <a href="AI.html" style="
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: #007BFF;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: bold;
+    transition: background-color 0.3s ease;">
+    AI Assist
+</a>
 
     <div id="chatbot">
         <div class="chatbot-widget">
